# vigil

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SECURITY.md  dev.py  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  icons.tsx  index.css  toast.tsx  types.ts
frontend/src/components/: AddMonitor.tsx  Auth.tsx  MonitorRow.tsx
src/vigil/: __init__.py  app.py  checks.py  cli.py  config.py  db.py  models.py  notify.py  scheduler.py  schemas.py  security.py  stats.py  tasks.py
src/vigil/templates/: dashboard.html
tests/: conftest.py  test_api.py  test_checks.py  test_scheduler.py  test_security.py
