[project]
name = "vigil"
version = "0.1.0"
description = "An uptime & change monitoring service — built on the ifleonlabs engine parts (apikit + taskq)."
readme = "README.md"
authors = [
    { name = "mahiprime2001", email = "tarunmatta5669@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apikit",
    "taskq",
    "notifykit",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
vigil = "vigil.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

# The bottom-of-the-pyramid engine parts, pulled straight from GitHub.
[tool.uv.sources]
apikit = { git = "https://github.com/ifleonlabs/apikit" }
taskq = { git = "https://github.com/ifleonlabs/taskq" }
notifykit = { git = "https://github.com/ifleonlabs/notifykit" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]
