[project]
name = "vigil"
version = "0.1.0"
description = "An uptime & change monitoring service — built on the ifleonlabs engine parts (apikit + taskq)."
readme = "README.md"
authors = [
    { name = "mahiprime2001", email = "tarunmatta5669@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apikit",
    "taskq",
    "notifykit",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "sqlmodel>=0.0.38",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
    "jinja2>=3.1.6",
    "typer>=0.26.7",
    "rich>=15.0.0",
]

[project.scripts]
vigil = "vigil.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
]

# The bottom-of-the-pyramid engine parts, pulled straight from GitHub.
[tool.uv.sources]
apikit = { git = "https://github.com/ifleonlabs/apikit" }
taskq = { git = "https://github.com/ifleonlabs/taskq" }
notifykit = { git = "https://github.com/ifleonlabs/notifykit" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]
